source/stylesheets/overlay.sass
@import 'config'

#navigation-modal
  +transition(opacity 0.2s, visibility 0s 0.2s)
  height: 100%
  left: 0
  opacity: 0
  position: fixed
  text-align: center
  top: 0
  visibility: hidden
  width: 100%
  z-index: 5

  &[aria-hidden="false"]
    +transition(opacity 0.4s)
    opacity: 1
    visibility: visible

    .page_list
      +transition(opacity 0.2s, visibility 0s 0.2s)
      opacity: 1
      visibility: visible

  .overlay_background
    background: $header-background-color
    bottom: 0
    left: 0
    opacity: .99
    position: absolute
    right: 0
    top: 0
    z-index: 5

  .overlay_content
    height: 100%
    overflow-y: scroll
    padding: 90px 0

  .close_overlay
    cursor: pointer
    color: $header-text-color
    height: 40px
    padding: 8px
    position: absolute
    right: 40px
    top: 26px
    width: 40px
    z-index: 6

    &:hover
      color: $header-text-hover-color

    svg
      fill: currentColor

    @media screen and (max-width: $break-small)
      right: 20px

  .page_list
    margin: 40px auto
    max-width: 80%
    opacity: 0
    position: relative
    z-index: 6
    visibility: hidden

    li
      display: block
      margin: 10px 0

      a
        color: $header-text-color
        display: inline-block
        font-size: 26px
        padding: 15px

        &:hover
          color: $header-text-hover-color
          text-decoration: underline

        @media screen and (max-width: $break-small)
          font-size: 20px

